Fix layout with container-fluid, added overflow-x: hidden to base.css to prevent horizontal scroll

--- a/static/base.css
+++ b/static/base.css
@@ -29,6 +29,7 @@
 
 html {
   font-family: var(--font-family);
+  overflow-x: hidden;
 }
 
 body {
